--- a/ML incidents/ml_incidents_XGBoost.ipynb
+++ b/ML incidents/ml_incidents_XGBoost.ipynb
@@ -2731,7 +2731,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Elapsed time:  0.2229938507080078\n"
+      "Elapsed time:  0.21412110328674316\n"
      ]
     }
    ],
@@ -2979,14 +2979,14 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done  45 out of  45 | elapsed:   25.3s finished\n"
+      "[Parallel(n_jobs=1)]: Done  45 out of  45 | elapsed:   25.8s finished\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Elapsed time:  25.691471576690674\n"
+      "Elapsed time:  26.208736658096313\n"
      ]
     }
    ],
@@ -3066,10 +3066,10 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.739528</td>\n",
-       "      <td>0.013330</td>\n",
-       "      <td>0.002801</td>\n",
-       "      <td>0.000750</td>\n",
+       "      <td>0.720102</td>\n",
+       "      <td>0.041556</td>\n",
+       "      <td>0.002400</td>\n",
+       "      <td>0.000490</td>\n",
        "      <td>1</td>\n",
        "      <td>{'n_features_to_select': 1}</td>\n",
        "      <td>0.371764</td>\n",
@@ -3090,10 +3090,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.680719</td>\n",
-       "      <td>0.007799</td>\n",
-       "      <td>0.002200</td>\n",
-       "      <td>0.000400</td>\n",
+       "      <td>0.690115</td>\n",
+       "      <td>0.025146</td>\n",
+       "      <td>0.003001</td>\n",
+       "      <td>0.000894</td>\n",
        "      <td>2</td>\n",
        "      <td>{'n_features_to_select': 2}</td>\n",
        "      <td>0.490556</td>\n",
@@ -3114,10 +3114,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.722578</td>\n",
-       "      <td>0.096870</td>\n",
-       "      <td>0.002799</td>\n",
-       "      <td>0.000400</td>\n",
+       "      <td>0.739601</td>\n",
+       "      <td>0.137553</td>\n",
+       "      <td>0.002800</td>\n",
+       "      <td>0.000399</td>\n",
        "      <td>3</td>\n",
        "      <td>{'n_features_to_select': 3}</td>\n",
        "      <td>0.418022</td>\n",
@@ -3138,10 +3138,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.767351</td>\n",
-       "      <td>0.008045</td>\n",
-       "      <td>0.003601</td>\n",
-       "      <td>0.000800</td>\n",
+       "      <td>0.803415</td>\n",
+       "      <td>0.032659</td>\n",
+       "      <td>0.003802</td>\n",
+       "      <td>0.000742</td>\n",
        "      <td>4</td>\n",
        "      <td>{'n_features_to_select': 4}</td>\n",
        "      <td>0.076710</td>\n",
@@ -3162,10 +3162,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.657940</td>\n",
-       "      <td>0.007306</td>\n",
-       "      <td>0.003600</td>\n",
-       "      <td>0.001207</td>\n",
+       "      <td>0.703521</td>\n",
+       "      <td>0.058707</td>\n",
+       "      <td>0.003402</td>\n",
+       "      <td>0.000490</td>\n",
        "      <td>5</td>\n",
        "      <td>{'n_features_to_select': 5}</td>\n",
        "      <td>0.007426</td>\n",
@@ -3186,10 +3186,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>0.539905</td>\n",
-       "      <td>0.004756</td>\n",
-       "      <td>0.003801</td>\n",
-       "      <td>0.000752</td>\n",
+       "      <td>0.541482</td>\n",
+       "      <td>0.010561</td>\n",
+       "      <td>0.003800</td>\n",
+       "      <td>0.000749</td>\n",
        "      <td>6</td>\n",
        "      <td>{'n_features_to_select': 6}</td>\n",
        "      <td>0.012126</td>\n",
@@ -3210,10 +3210,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>0.413017</td>\n",
-       "      <td>0.007262</td>\n",
-       "      <td>0.003401</td>\n",
-       "      <td>0.000802</td>\n",
+       "      <td>0.426903</td>\n",
+       "      <td>0.031207</td>\n",
+       "      <td>0.003200</td>\n",
+       "      <td>0.000400</td>\n",
        "      <td>7</td>\n",
        "      <td>{'n_features_to_select': 7}</td>\n",
        "      <td>0.116704</td>\n",
@@ -3234,10 +3234,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>0.303626</td>\n",
-       "      <td>0.016845</td>\n",
-       "      <td>0.003599</td>\n",
-       "      <td>0.000489</td>\n",
+       "      <td>0.318800</td>\n",
+       "      <td>0.024251</td>\n",
+       "      <td>0.003801</td>\n",
+       "      <td>0.000749</td>\n",
        "      <td>8</td>\n",
        "      <td>{'n_features_to_select': 8}</td>\n",
        "      <td>0.375386</td>\n",
@@ -3258,10 +3258,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>0.180826</td>\n",
-       "      <td>0.007527</td>\n",
-       "      <td>0.004399</td>\n",
-       "      <td>0.001017</td>\n",
+       "      <td>0.166399</td>\n",
+       "      <td>0.003005</td>\n",
+       "      <td>0.003399</td>\n",
+       "      <td>0.000490</td>\n",
        "      <td>9</td>\n",
        "      <td>{'n_features_to_select': 9}</td>\n",
        "      <td>0.069318</td>\n",
@@ -3286,15 +3286,15 @@
       ],
       "text/plain": [
        "   mean_fit_time  std_fit_time  mean_score_time  std_score_time  \\\n",
-       "0       0.739528      0.013330         0.002801        0.000750   \n",
-       "1       0.680719      0.007799         0.002200        0.000400   \n",
-       "2       0.722578      0.096870         0.002799        0.000400   \n",
-       "3       0.767351      0.008045         0.003601        0.000800   \n",
-       "4       0.657940      0.007306         0.003600        0.001207   \n",
-       "5       0.539905      0.004756         0.003801        0.000752   \n",
-       "6       0.413017      0.007262         0.003401        0.000802   \n",
-       "7       0.303626      0.016845         0.003599        0.000489   \n",
-       "8       0.180826      0.007527         0.004399        0.001017   \n",
+       "0       0.720102      0.041556         0.002400        0.000490   \n",
+       "1       0.690115      0.025146         0.003001        0.000894   \n",
+       "2       0.739601      0.137553         0.002800        0.000399   \n",
+       "3       0.803415      0.032659         0.003802        0.000742   \n",
+       "4       0.703521      0.058707         0.003402        0.000490   \n",
+       "5       0.541482      0.010561         0.003800        0.000749   \n",
+       "6       0.426903      0.031207         0.003200        0.000400   \n",
+       "7       0.318800      0.024251         0.003801        0.000749   \n",
+       "8       0.166399      0.003005         0.003399        0.000490   \n",
        "\n",
        "  param_n_features_to_select                       params  split0_test_score  \\\n",
        "0                          1  {'n_features_to_select': 1}           0.371764   \n",
@@ -3370,7 +3370,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x203856c5948>"
+       "<matplotlib.legend.Legend at 0x1dd8488d048>"
       ]
      },
      "execution_count": 23,
@@ -3410,7 +3410,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Elapsed time:  0.31403517723083496\n"
+      "Elapsed time:  0.2799994945526123\n"
      ]
     }
    ],
@@ -3523,14 +3523,14 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done  90 out of  90 | elapsed:  1.0min finished\n"
+      "[Parallel(n_jobs=1)]: Done  90 out of  90 | elapsed:   57.2s finished\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Elapsed time:  61.22306513786316\n"
+      "Elapsed time:  57.60830903053284\n"
      ]
     }
    ],
@@ -3620,10 +3620,10 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1.131224</td>\n",
-       "      <td>0.064048</td>\n",
-       "      <td>0.003606</td>\n",
-       "      <td>0.000665</td>\n",
+       "      <td>1.046285</td>\n",
+       "      <td>0.009874</td>\n",
+       "      <td>0.003300</td>\n",
+       "      <td>0.000459</td>\n",
        "      <td>1</td>\n",
        "      <td>{'n_features_to_select': 1}</td>\n",
        "      <td>0.183759</td>\n",
@@ -3654,10 +3654,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1.077833</td>\n",
-       "      <td>0.183896</td>\n",
-       "      <td>0.003500</td>\n",
-       "      <td>0.000922</td>\n",
+       "      <td>0.953589</td>\n",
+       "      <td>0.010017</td>\n",
+       "      <td>0.003400</td>\n",
+       "      <td>0.000489</td>\n",
        "      <td>2</td>\n",
        "      <td>{'n_features_to_select': 2}</td>\n",
        "      <td>0.589752</td>\n",
@@ -3688,10 +3688,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.886174</td>\n",
-       "      <td>0.079283</td>\n",
-       "      <td>0.003300</td>\n",
-       "      <td>0.000640</td>\n",
+       "      <td>0.865760</td>\n",
+       "      <td>0.019714</td>\n",
+       "      <td>0.003607</td>\n",
+       "      <td>0.000496</td>\n",
        "      <td>3</td>\n",
        "      <td>{'n_features_to_select': 3}</td>\n",
        "      <td>0.595056</td>\n",
@@ -3722,10 +3722,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.771457</td>\n",
-       "      <td>0.076302</td>\n",
-       "      <td>0.004600</td>\n",
-       "      <td>0.003527</td>\n",
+       "      <td>0.750825</td>\n",
+       "      <td>0.009408</td>\n",
+       "      <td>0.003200</td>\n",
+       "      <td>0.000400</td>\n",
        "      <td>4</td>\n",
        "      <td>{'n_features_to_select': 4}</td>\n",
        "      <td>0.449413</td>\n",
@@ -3756,10 +3756,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.690080</td>\n",
-       "      <td>0.075424</td>\n",
-       "      <td>0.003399</td>\n",
-       "      <td>0.000662</td>\n",
+       "      <td>0.641244</td>\n",
+       "      <td>0.010167</td>\n",
+       "      <td>0.003300</td>\n",
+       "      <td>0.000459</td>\n",
        "      <td>5</td>\n",
        "      <td>{'n_features_to_select': 5}</td>\n",
        "      <td>0.522281</td>\n",
@@ -3790,10 +3790,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>0.522773</td>\n",
-       "      <td>0.039668</td>\n",
-       "      <td>0.003201</td>\n",
-       "      <td>0.000402</td>\n",
+       "      <td>0.526232</td>\n",
+       "      <td>0.006806</td>\n",
+       "      <td>0.003400</td>\n",
+       "      <td>0.000491</td>\n",
        "      <td>6</td>\n",
        "      <td>{'n_features_to_select': 6}</td>\n",
        "      <td>0.545947</td>\n",
@@ -3824,10 +3824,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>0.432116</td>\n",
-       "      <td>0.030066</td>\n",
-       "      <td>0.003600</td>\n",
-       "      <td>0.000664</td>\n",
+       "      <td>0.413887</td>\n",
+       "      <td>0.008528</td>\n",
+       "      <td>0.003701</td>\n",
+       "      <td>0.000641</td>\n",
        "      <td>7</td>\n",
        "      <td>{'n_features_to_select': 7}</td>\n",
        "      <td>0.489557</td>\n",
@@ -3858,10 +3858,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>0.305447</td>\n",
-       "      <td>0.025353</td>\n",
-       "      <td>0.003699</td>\n",
-       "      <td>0.000458</td>\n",
+       "      <td>0.291260</td>\n",
+       "      <td>0.004773</td>\n",
+       "      <td>0.003601</td>\n",
+       "      <td>0.000664</td>\n",
        "      <td>8</td>\n",
        "      <td>{'n_features_to_select': 8}</td>\n",
        "      <td>0.504037</td>\n",
@@ -3892,10 +3892,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>0.184881</td>\n",
-       "      <td>0.022822</td>\n",
-       "      <td>0.003500</td>\n",
-       "      <td>0.000501</td>\n",
+       "      <td>0.171510</td>\n",
+       "      <td>0.003943</td>\n",
+       "      <td>0.003001</td>\n",
+       "      <td>0.000001</td>\n",
        "      <td>9</td>\n",
        "      <td>{'n_features_to_select': 9}</td>\n",
        "      <td>0.590786</td>\n",
@@ -3930,15 +3930,15 @@
       ],
       "text/plain": [
        "   mean_fit_time  std_fit_time  mean_score_time  std_score_time  \\\n",
-       "0       1.131224      0.064048         0.003606        0.000665   \n",
-       "1       1.077833      0.183896         0.003500        0.000922   \n",
-       "2       0.886174      0.079283         0.003300        0.000640   \n",
-       "3       0.771457      0.076302         0.004600        0.003527   \n",
-       "4       0.690080      0.075424         0.003399        0.000662   \n",
-       "5       0.522773      0.039668         0.003201        0.000402   \n",
-       "6       0.432116      0.030066         0.003600        0.000664   \n",
-       "7       0.305447      0.025353         0.003699        0.000458   \n",
-       "8       0.184881      0.022822         0.003500        0.000501   \n",
+       "0       1.046285      0.009874         0.003300        0.000459   \n",
+       "1       0.953589      0.010017         0.003400        0.000489   \n",
+       "2       0.865760      0.019714         0.003607        0.000496   \n",
+       "3       0.750825      0.009408         0.003200        0.000400   \n",
+       "4       0.641244      0.010167         0.003300        0.000459   \n",
+       "5       0.526232      0.006806         0.003400        0.000491   \n",
+       "6       0.413887      0.008528         0.003701        0.000641   \n",
+       "7       0.291260      0.004773         0.003601        0.000664   \n",
+       "8       0.171510      0.003943         0.003001        0.000001   \n",
        "\n",
        "  param_n_features_to_select                       params  split0_test_score  \\\n",
        "0                          1  {'n_features_to_select': 1}           0.183759   \n",
@@ -4047,7 +4047,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x20385757908>"
+       "<matplotlib.legend.Legend at 0x1dd85970948>"
       ]
      },
      "execution_count": 30,
@@ -4087,7 +4087,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Elapsed time:  0.28705787658691406\n"
+      "Elapsed time:  0.27499866485595703\n"
      ]
     }
    ],
@@ -4569,6 +4569,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Neighborhood</th>\n",
        "      <th>incident</th>\n",
        "      <th>pred_incident</th>\n",
        "    </tr>\n",
@@ -4576,26 +4577,31 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>Kop Zeedijk</td>\n",
        "      <td>3.0</td>\n",
        "      <td>2.998795</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>Oude Kerk e.o.</td>\n",
        "      <td>8.0</td>\n",
        "      <td>2.134015</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>Burgwallen Oost</td>\n",
        "      <td>8.0</td>\n",
        "      <td>7.994024</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>Nes e.o.</td>\n",
        "      <td>5.0</td>\n",
        "      <td>5.002687</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>BG-terrein e.o.</td>\n",
        "      <td>3.0</td>\n",
        "      <td>3.616330</td>\n",
        "    </tr>\n",
@@ -4603,52 +4609,58 @@
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>474</th>\n",
+       "      <td>Gein Zuidwest</td>\n",
        "      <td>3.0</td>\n",
        "      <td>3.002095</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>475</th>\n",
+       "      <td>Gein Noordoost</td>\n",
        "      <td>6.0</td>\n",
        "      <td>-0.011137</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>476</th>\n",
+       "      <td>Gein Zuidoost</td>\n",
        "      <td>7.0</td>\n",
        "      <td>6.980494</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>477</th>\n",
+       "      <td>Dorp Driemond</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.009127</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>478</th>\n",
+       "      <td>Landelijk gebied Driemond</td>\n",
        "      <td>0.0</td>\n",
        "      <td>-0.149741</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>448 rows × 2 columns</p>\n",
+       "<p>479 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     incident  pred_incident\n",
-       "0         3.0       2.998795\n",
-       "1         8.0       2.134015\n",
-       "2         8.0       7.994024\n",
-       "3         5.0       5.002687\n",
-       "4         3.0       3.616330\n",
-       "..        ...            ...\n",
-       "474       3.0       3.002095\n",
-       "475       6.0      -0.011137\n",
-       "476       7.0       6.980494\n",
-       "477       0.0       0.009127\n",
-       "478       0.0      -0.149741\n",
+       "                  Neighborhood  incident  pred_incident\n",
+       "0                  Kop Zeedijk       3.0       2.998795\n",
+       "1               Oude Kerk e.o.       8.0       2.134015\n",
+       "2              Burgwallen Oost       8.0       7.994024\n",
+       "3                     Nes e.o.       5.0       5.002687\n",
+       "4              BG-terrein e.o.       3.0       3.616330\n",
+       "..                         ...       ...            ...\n",
+       "474              Gein Zuidwest       3.0       3.002095\n",
+       "475             Gein Noordoost       6.0      -0.011137\n",
+       "476              Gein Zuidoost       7.0       6.980494\n",
+       "477              Dorp Driemond       0.0       0.009127\n",
+       "478  Landelijk gebied Driemond       0.0      -0.149741\n",
        "\n",
-       "[448 rows x 2 columns]"
+       "[479 rows x 3 columns]"
       ]
      },
      "execution_count": 41,
@@ -4657,8 +4669,9 @@
     }
    ],
    "source": [
-    "pred_csv = df_features['Neighborhood']\n",
-    "pred_csv['incident', 'pred_incident'] = df_features_clean[['incident', 'pred_incident']]\n",
+    "neighborhood = df_features['Neighborhood']\n",
+    "pred_csv = pd.concat([neighborhood, df_features_clean], axis = 1)\n",
+    "pred_csv = pred_csv[['Neighborhood', 'incident', 'pred_incident']]\n",
     "pred_csv"
    ]
   },
